# RRL-Industial-Robot

./: .posegraph  README.md  frames_2025-04-14_01.22.50.gv  frames_2025-04-15_21.47.28.gv  frames_2025-04-15_21.49.18.gv  lidar_parser.cpp  robot_recording_20250420_223541.json  robot_recording_20250420_223721.json  robot_recording_20250420_223958.json  robot_recording_20250420_224428.json  robot_recording_20250420_224948.json  robot_recording_20250420_225110.json  ros2_packages.txt  rqt_config.yaml  test_arm_motion.py  test_motion.py  tree_output.txt  yolov8_detect.py
SRC/Robot Arm Movement/Python/: Arm_mdns.py
SRC/Robot Arm Movement/STM32/: Arm_controller.c
SRC/Robot Arm Movement/esp8266/: arm_esp.c
SRC/Robot Base Movement/Python/: motor_contrtol_mdns.py
SRC/Robot Base Movement/STM32/: Robot_motor_control.c
SRC/Robot Base Movement/esp8266/: motor_esp.c
competition_log/: metadata.yaml
detection_results/: frame_1052.txt  frame_1053.txt  frame_1054.txt  frame_1055.txt  frame_1056.txt  frame_1057.txt  frame_1058.txt  frame_1059.txt  frame_1060.txt  frame_1061.txt  frame_1062.txt  frame_1063.txt  frame_1064.txt  frame_1065.txt  frame_1066.txt  frame_1067.txt  frame_1068.txt  frame_1069.txt  frame_1070.txt  frame_1071.txt  frame_1072.txt  frame_1073.txt  frame_1074.txt  frame_1075.txt  frame_1076.txt  frame_1078.txt  frame_1079.txt  frame_1080.txt  frame_1081.txt  frame_1082.txt  frame_1083.txt  frame_1084.txt  frame_1085.txt  frame_1086.txt  frame_1087.txt  frame_1088.txt  frame_1089.txt  frame_1090.txt  frame_1091.txt  frame_1092.txt  (+301 more)
install/: local_setup.sh  setup.sh
install/competition_robot/lib/competition_robot/: competition_node
install/competition_robot/share/competition_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: local_setup.sh  package.sh
install/lidar_front_filter/lib/lidar_front_filter/: lidar_front_filter
install/lidar_front_filter/share/lidar_front_filter/: package.bash  package.sh  package.zsh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh
install/my_robot_camera/share/my_robot_camera/: package.ps1  package.sh
install/my_robot_camera_msgs/share/my_robot_camera_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
install/my_robot_moveit_config/share/my_robot_moveit_config/: package.sh  package.xml
install/my_robot_navigation/share/my_robot_navigation/: local_setup.dsv  package.ps1  package.sh
install/navigation_config/share/navigation_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/referee_box/lib/referee_box/: referee_box_node
install/referee_box/share/referee_box/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_control/lib/robot_control/: old_robot_server  robot_server
install/robot_control/share/robot_control/: package.sh  package.xml
install/robot_control_interfaces/share/robot_control_interfaces/: package.sh  package.zsh
install/robot_description/share/robot_description/: package.sh
log/: latest_build
scripts/: joint_state_pub.launch.py  joint_state_publisher.py
src/competition_robot/: setup.cfg  setup.py
src/competition_robot/competition_robot/: competition_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
src/install/my_robot_bringup/share/my_robot_bringup/launch/: core.launch.py  robot.launch.py
src/install/my_robot_bringup/share/my_robot_bringup/rviz/: robot.rviz
src/install/my_robot_camera/share/my_robot_camera/: package.dsv  package.sh  package.xml  package.zsh
src/install/my_robot_camera/share/my_robot_camera/launch/: camera.launch.py  camera_with_bridge.launch.py
src/install/robot_control/share/robot_control/: package.sh  package.xml
src/install/robot_control/share/robot_control/config/: arm_controller_params.yaml
src/install/robot_control/share/robot_control/launch/: arm_controller.launch.py
src/lidar_front_filter/: setup.cfg  setup.py
src/log/: latest_build
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: test_tf.launch.py
src/my_robot_bringup/rviz/: robot.rviz
src/my_robot_camera/: setup.cfg  setup.py
src/my_robot_camera/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_camera/log/: latest_build
src/my_robot_camera/models/: best.pt
src/my_robot_camera_msgs/: CMakeLists.txt
src/my_robot_moveit_config/: .setup_assistant
src/my_robot_moveit_config/config/: joint_limits.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf
src/my_robot_moveit_config/launch/: move_group.launch.py  warehouse_db.launch.py
src/my_robot_moveit_config/scripts/: move_group_interface.py
src/my_robot_navigation/: CMakeLists.txt
src/my_robot_navigation/launch/: localization.launch.py  map_server.launch.py  simple_map_server.launch.py
src/my_robot_navigation/maps/: map.pgm  map.yaml
src/my_robot_navigation/scripts/: holonomic_action.py
src/navigation_config/: package.xml  setup.cfg  setup.py
src/navigation_config/navigation_config/: amcl_config.yaml
src/referee_box/: package.xml  setup.cfg  setup.py
src/referee_box/launch/: referee_box.launch.py
src/referee_box/referee_box/: referee_box_node.py
src/referee_box/referee_box/config/: referee_config.yaml
src/robot_control/: setup.py
src/robot_control/config/: mecanum_nav.rviz
src/robot_control/robot_control/: arm_controller_node.py  arm_server.py  best.pt  esp_motor_control copy.py  esp_motor_control.py  task_manager.py
src/robot_control/task_manager/: CMakeLists.txt  package.xml
src/robot_control_interfaces/: CMakeLists.txt
src/robot_description/: CMakeLists.txt
src/robot_description/description/: atwork.urdf.xacro  lidar.xacro  robot_core.xacro
src/robot_description/meshes/: a1.STL  a2.STL  a4.STL  bg.STL  g12.STL
src/slam_toolbox/config/: slam_config.yaml
src/state_publisher/: package.xml  setup.py
(+243 files in other folders)
